--- a/offers.html
+++ b/offers.html
@@ -105,8 +105,10 @@
         flex-direction: row;
 
     }
-
-
+   
+    .par1{
+      width: 380px;
+    }
 
     }
 
@@ -123,8 +125,9 @@
 
     </div>
  <div class="par1">
-<a  style="transform: translateX(-150px);position: absolute;">Offers will be soon</a>
-
+  <center>
+<a  style="">Offers will be soon</a>
+</center>
 </div>
 </center> 
 
