--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
       transform: translateZ(-5px) scale(1.25);
     }
     .content {
-      width:420px;
-             height:270px;
+      width:100%;
+             height:320px;
       
       background: rgb(255, 255, 255);
       box-sizing: border-box;
@@ -330,7 +330,7 @@
            flex-direction: column;
           }
           #make{
-            transform: translateX(-600px);
+            transform: translateX(-900px);
           }
           .center{
             height: 800px;
