--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     </div>
 
     <div class="content">
-        <img src="img/im3.png" id="make" style="scale: 0.5;transform: translateX(-400px);z-index: 5;scale: 1;" /></div>
+        <img src="img/im3.png" id="make" style="scale: 0.5;transform: translateX(-900px);z-index: 5;scale: 1;" /></div>
   </div>
 
  <style>
@@ -329,7 +329,7 @@
        
            flex-direction: column;
           }
-          .content #make{
+          #make{
             transform: translateX(-900px);
               scale:0.7;
           }
