--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     </div>
 
     <div class="content">
-        <img src="img/im3.png" id="make" style="scale: 0.5;transform: translateX(-500px);z-index: 5;scale: 1;" /></div>
+        <img src="img/im3.png" id="make" style="scale: 0.5;transform: padding-left:200px;z-index: 5;scale: 1;" /></div>
   </div>
 
  <style>
@@ -330,7 +330,7 @@
            flex-direction: column;
           }
           #make{
-            transform: translateX(200px);
+          
               scale:0.5;
           }
           .center{
