--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
        
            flex-direction: column;
           }
-          #make{
-          
+           .content img{
+             padding-left:100px;
               scale:0.5;
           }
           .center{
