--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@
            flex-direction: column;
           }
            .content img{
-             padding-left:100px;
-              scale:0.5;
+             padding-left:10px;
+             width:90px;
           }
           .center{
             height: 800px;
